# docxclassifier

./: .gitignore  .gitmodules  README.md  document_analysis_stack.code-workspace  pyproject.toml  requirements.txt
cfg/base/data_args/: default.yaml
cfg/base/data_args/document_classification/: rvlcdip.yaml  tobacco3482.yaml
cfg/base/defaults/data_loader_args/: default.yaml
cfg/base/defaults/eval_realtime_augs/: cifar10.yaml  (+3 more)
cfg/base/model_args/: fusion_model_toy_model_cifar10.yaml  timm_model_resnet50.yaml  tv_model_alexnet.yaml
cfg/evaluate/: hydra.yaml
cfg/evaluate/document_classification/: with_aug_and_preprocess.yaml
cfg/prepare_dataset/: hydra.yaml
cfg/prepare_dataset/document_classification/: with_aug_and_preprocess.yaml
cfg/rvlcdip/: base.yaml  large.yaml  xlarge.yaml
cfg/tobacco3482_imagenet/: base.yaml  large.yaml  xlarge.yaml
cfg/tobacco3482_rvlcdip/: base.yaml  large.yaml  xlarge.yaml
data/: Tobacco3482  rvlcdip
data/tobacco3482/: test.txt  train.txt
scripts/: evaluate.sh  generate_attention_maps.sh  prepare_dataset.sh  run_cfg.sh  train.sh
src/das/data/: __init__.py  custom_tokenizers.py  data_args.py  samplers.py  tokenizer.py
src/das/models/: model.py  model_args.py
src/das/trainers/: evaluate.py  generate_attention_maps.py  training_args.py
src/das/utils/: arg_parser.py  basic_args.py  basic_utils.py  evaluation.py  lr_schedulers.py  metrics.py
src/docxclassifier/: __init__.py
src/docxclassifier/data/: __init__.py
src/docxclassifier/models/: __init__.py
src/docxclassifier/runners/: evaluate.py  prepare_dataset.py
(+92 files in other folders)
